--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -19,9 +19,10 @@
   --font-weight-regular: 400;
   --font-weight-bold: 700;
   /* Defining line heights */
-  ---line-height-small: 1.2;
-  ---line-height-base: 1.5;
-  ---line-height-big: 1.8;
+  --line-height-small: 1.2;
+  --line-height-base: 1.5;
+  --line-height-big: 1.8;
+  --section-header-align: center;
 }
 
 /* Effortless transitions when scrolling */
