--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -36,7 +36,7 @@ body {
   font-family: var(--font-family-base);
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-regular);
-  line-height: var(---line-height-base);
+  line-height: var(--line-height-base);
 }
 
 h1,
@@ -56,9 +56,11 @@ a {
 .visually-hidden {
   display: none;
 }
+
 .card-category {
   color: var(--color-primary);
 }
+
 .section-tagline {
   color: var(--color-primary);
 }
